--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@google/semantic-release-replace-plugin": "^1.0.2",
+    "semantic-release-replace-plugin": "^1.0.2",
     "debug": "^4.1.1",
     "lodash": "^4.17.21",
     "micromatch": "^4.0.4"
